@@ -431,21 +431,24 @@ __drlm_listnetwork ()
 
 __drlm_listclient ()
 {
-	local options_s="-c -A -U -h"
-	local options_l="--client --all --unsched --help"
+	local options_s="-c -A -U -p -h"
+	local options_l="--client --all --unsched --pretty --help"
 
 	if __drlm_exist_option "-h --help" "$workflow"; then
 		local options_s="-h"
 		local options_l="--help"
 	elif __drlm_exist_option "-c --client" "$workflow"; then
-		local options_s="-n"
-		local options_l="--netname"
+		local options_s="-n -p"
+		local options_l="--netname --pretty"
 	elif __drlm_exist_option "-A --all" "$workflow"; then
-		local options_s="-A -U"
-		local options_l="--all --unsched"
+		local options_s="-A -U -p"
+		local options_l="--all --unsched --pretty"
 	elif __drlm_exist_option "-U --unsched" "$workflow"; then
-		local options_s="-U -A"
-		local options_l="--unsched --all"
+		local options_s="-U -p -A"
+		local options_l="--unsched --pretty --all"
+	elif __drlm_exist_option "-p --pretty" "$workflow"; then
+		local options_s="-p -U -A"
+		local options_l="--pretty --unsched --all"
 	fi
 
 	case "$prev" in
