@@ -364,17 +364,40 @@ SUDO_CMDS_DRLM="mount vgs stat"
 SSH_PORT=22
 SSH_OPTS="-tt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no -o LogLevel=ERROR -p ${SSH_PORT}"
 
-############### ----- LIST BACKUPS PRETTY OPTIONS
+############### ----- LIST PRETTY OPTIONS
 #
 ########
 
+# ENABLE PRETTY LIST BY DEFAULT
+#
+# You can get extra information when litbackup and listclient are executed with -p parameter.
+# Also you can enable pretty lists by default with next parameter.
+#
+# DEF_RETTY=[true|false]
+#
+DEF_PRETTY=true
+
 # SIZE IN MB
+# Backups of less than BACKUP_SIZE_STATUS_FAILED in megabytes will show in red color and 
+# Backups of less than BACKUP_SIZE_STATUS_WARNING in megabytes will show in orange color.
 BACKUP_SIZE_STATUS_FAILED="200"
-BACKUP_SIZE_STATUS_WARNING="1100"
+BACKUP_SIZE_STATUS_WARNING="800"
 
 # TIME IN SECONDS
-BACKUP_TIME_STATUS_FAILED="120"
-BACKUP_TIME_STATUS_WARNING="240"
+# Backups that take less than BACKUP_TIME_STATUS_FAILED in seconds will show in red color and 
+# Backups that take less than BACKUP_TIME_STATUS_WARNING in secods will show in orange color.
+BACKUP_TIME_STATUS_FAILED="60"
+BACKUP_TIME_STATUS_WARNING="120"
+
+# TIMEOUT FOR TEST ONLINE CLIENTS
+# If pretty mode is enable, either with the configuration variable DEF_PRETTY 
+# or with the -p parameter in the listclient or listbackup workflow shows in green up and ssh reachable clients
+# and in red unreachable clients.
+#
+# The CLIENT_LIST_TIMEOUT is the time DRLM will wait to print in green if a client is up or red if down.
+#
+
+CLIENT_LIST_TIMEOUT="0.2"
 
 ################ ---- custom scripts
 #
