@@ -13,6 +13,7 @@ drlm (2.3.0) stable release; urgency=high
   * Debian 10 Support on install client workflow.
   * Added ReaR 2.5 support on Debian 9, Debian8, Ubuntu 18, Ubuntu 16 and Ubuntu 14.
   * Added OS version and ReaR version in listclient.
+  * Added "-p" on list clients workflow to mark client status (up/down).
 
  -- Néfix Estrada <nefix@brainupdaters.net>  Mon, 10 Jun 2019 00:00:00 +0100
 
